Ajout d'une indication visuelle pour les prescriptions reprises d'un dossier précédent

--- a/application/views/scripts/dossier/prescription.phtml
+++ b/application/views/scripts/dossier/prescription.phtml
@@ -113,6 +113,10 @@ echo "
 								</td>
 							";
 						}
+						if($listePrescr[$i][$j]['Reprise'] ){
+							echo "<td rowspan='".$nbAssoc."' class='span1'><span class='label label-warning'>Reprise</span></td>";
+
+						}
 						if($verrou == 0){
 							echo "
 								<td class='span1' rowspan='".$nbAssoc."'>
@@ -396,63 +400,63 @@ $(document).ready(function(){
 		return false;
 	});
 
-	//Récupération des prescriptions d'un autre dossier
-	var dialogRecupPresc = $('<div style="display:none;"></div>').appendTo('body');
+		//Récupération des prescriptions d'un autre dossier
+		var dialogRecupPresc = $('<div style="display:none;"></div>').appendTo('body');
+	
+		dialogRecupPresc.dialog({
+			title: "Reprise des prescriptions d'un dossier précédent",
+			modal: true,
+			autoOpen: false,
+			width: 1200,
+			height: 'auto',
+			buttons: [
+				{
+					text: 'Reprendre les prescriptions',
+					class: 'btn btn-success',
+					click: function() {
+						if ($('input[type=radio][name=dossierSelect]:checked').length == 1) {
+							$.ajax({
+								type: "POST",
+								url: "/dossier/recupprescription",
+								data: $("#selectionDossier").serialize(),
+								before: function(){
+									dialogRecupPresc.html("Veuillez patienter pendant la reprise des prescriptions <img src='/images/load.gif' />");
+								},
+								success: function(msg){ 
+									window.location='/dossier/prescription/id/'+$("#idDossier").val();
+								}
+							});
+						} else {
+							return false;
+						}
 
-	dialogRecupPresc.dialog({
-		title: "Reprise des prescriptions d'un dossier précédent",
-		modal: true,
-		autoOpen: false,
-		width: 1200,
-		height: 'auto',
-		buttons: [
-            {
-                text: 'Reprendre les prescriptions',
-                class: 'btn btn-success',
-                click: function() {
-                    if ($('input[type=radio][name=dossierSelect]:checked').length == 1) {
-                        $.ajax({
-                            type: "POST",
-                            url: "/dossier/recupprescription",
-                            data: $("#selectionDossier").serialize(),
-                            before: function(){
-                                dialogRecupPresc.html("Veuillez patienter pendant la reprise des prescriptions <img src='/images/load.gif' />");
-                            },
-                            success: function(msg){
-                                window.location='/dossier/prescription/id/'+$("#idDossier").val();
-                            }
-                        });
-                    } else {
-                        return false;
-                    }
-
-                    return false;
-                }
-            },
-            {
-                text: 'Annuler',
-                class: 'btn',
-                click: function() {
-                    $(this).html("");
-                    $(this).dialog("close");
-                }
-            }
-        ],
-	});
-
-	$(".recupPrescDossier").live('click',function(){
-		//On ouvre la boite de dialogue
-		$.ajax({
-			type: "POST",
-			url: "/dossier/formrecupprescription",
-			data: "&idDossier="+$("#idDossier").val(),
-			success: function(msg){
-				dialogRecupPresc.html(msg);
-				dialogRecupPresc.dialog("open");
-			}
+						return false;
+					}
+				},
+				{
+					text: 'Annuler',
+					class: 'btn',
+					click: function() {
+						$(this).html("");
+						$(this).dialog("close");
+					}
+				}
+			],
 		});
-		return false;
-	});
+
+		$(".recupPrescDossier").live('click',function(){
+			//On ouvre la boite de dialogue
+			$.ajax({
+				type: "POST",
+				url: "/dossier/formrecupprescription",
+				data: "&idDossier="+$("#idDossier").val(),
+				success: function(msg){
+					dialogRecupPresc.html(msg);
+					dialogRecupPresc.dialog("open");
+				}
+			});
+			return false;
+		});
 
 	//Edition des prescriptions d'un dossier
 	var dialogPrescEdit = $('<div style="display:none;"></div>').appendTo('body');
